# dash

./: CMakeLists.txt
cpp/: databasemanager.cpp  databasemanager.h  main.cpp  qmlmqttclient.cpp  qmlmqttclient.h
qml/: Main.qml
qml/components/: Device.qml  Edev.qml  Gateways.qml  Maps.qml  RightPane.qml  Sidebar.qml
